tests/negative/runtime/union_inactive_read/input.ci
union Value {
    int i;
    string s;
}

void main() {
    Value v;
    v.i = 42;
    print(v.s + "\n");
}
